removed deprecated call